[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/rule-engine",
    "crates/rule-engine/json-logic",
    "crates/rule-engine/farmscript",
    "crates/rule-engine/yaml-loader",
    "crates/rule-engine/llm-evaluator",
    "crates/persistence",
    "crates/api",
    "crates/ai-agent",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Product-FARM Team"]
license = "MIT"
repository = "https://github.com/ayushmaanbhav/product-farm"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graph algorithms
petgraph = "0.6"

# Numeric precision
rust_decimal = { version = "1.32", features = ["serde", "serde-with-str"] }

# gRPC
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (DGraph)
# dgraph-tonic = "0.8"  # Will add when implementing persistence

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
smallvec = "1.11"
hashbrown = "0.14"
parking_lot = "0.12"
regex = "1.10"
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# =============================================================================
# SECURITY NOTE: dgraph-tonic dependency has known vulnerabilities
# =============================================================================
# The optional dgraph feature (in persistence crate) depends on dgraph-tonic 0.11
# which transitively depends on vulnerable versions:
#   - rustls 0.20.9 (RUSTSEC-2024-0336, CVSS 7.5 - infinite loop)
#   - ring 0.16.20 (RUSTSEC-2025-0009 - AES panic)
#
# MITIGATION: dgraph feature is disabled by default and not used in production.
# Track: https://github.com/Swoorup/dgraph-tonic/issues for updates.
# =============================================================================
