[package]
name = "product-farm-ai-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI Agent tools for Product-FARM rule management"

[features]
default = []
anthropic = ["dep:reqwest"]

[dependencies]
product-farm-core = { path = "../core", version = "0.2.0" }
product-farm-json-logic = { path = "../rule-engine/json-logic", version = "0.2.0" }
product-farm-rule-engine = { path = "../rule-engine", version = "0.2.0" }
product-farm-persistence = { path = "../persistence", version = "0.2.0" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

# HTTP client for AI API calls (optional)
reqwest = { version = "0.13", features = ["json"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
