[package]
name = "product-farm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain types for Product-FARM rule engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
hashbrown = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
