[package]
name = "product-farm-rule-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule engine with DAG-based execution for Product-FARM"
keywords = ["rules", "engine", "dag", "json-logic", "attributes"]
categories = ["algorithms", "config"]

[dependencies]
product-farm-core = { path = "../core" }
product-farm-json-logic = { path = "json-logic" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
petgraph = "0.6"
rayon = "1.10"
parking_lot = "0.12"

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
criterion = { workspace = true }

[[bench]]
name = "rule_engine_bench"
harness = false
