[package]
name = "product-farm-llm-evaluator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM-based rule evaluation for Product-FARM"
keywords = ["llm", "ai", "evaluation", "rules"]
categories = ["algorithms"]

[features]
default = []
anthropic = ["dep:reqwest"]
ollama = ["dep:reqwest"]
# Enable all LLM providers
all-providers = ["anthropic", "ollama"]

[dependencies]
# Core types
product-farm-core = { path = "../../core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
futures = "0.3"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client for API calls (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
