[package]
name = "product-farm-yaml-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flexible YAML-based product definition loader for Product-FARM"
keywords = ["yaml", "product", "loader", "schema", "inference"]
categories = ["config", "parser-implementations"]

[dependencies]
# Core types
product-farm-core = { path = "../../core", version = "0.2.0" }
product-farm-rule-engine = { path = "..", version = "0.2.0" }
product-farm-farmscript = { path = "../farmscript", version = "0.2.0" }
product-farm-json-logic = { path = "../json-logic", version = "0.2.0" }
product-farm-llm-evaluator = { path = "../llm-evaluator", version = "0.2.0" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
regex = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }

# File handling
walkdir = "2.4"
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3.10"
